--- a/style.css
+++ b/style.css
@@ -12,10 +12,16 @@ html, body {
     background-color: black;
 }
 
+body {
+    background: url('imagens/fundo-madeira.jpg') no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+
+}
+
 main {
     height: 100vh;
     position: relative;
-    background-color: grey;
 }
 
 #telefone {
@@ -23,7 +29,16 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 500px;
-    width: 500px;
-    background-color: blue;
+    height: 627px;
+    width: 311px;
+    background: url('imagens/frame-iphone.png') no-repeat;
+
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 267px;
+    height: 471px;
 }
